# grimoire-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  gemini_reference.md  setup.md
grimoire/: artificer.py  cli.py  config.py  core.py  db.py  guard.py  keys.py  logger.py  ritual.py  schemas.py  stats.py
summaries/: summary_ PER G.G.- The Devia Discordia.pdf.json  summary_$alvation for $ale - Rev. F. Cook.pdf.json  summary_(My Female Slave 2 (of 13)) Andrzej J_ziorski - The Luciferian Doctrine.pdf.json  summary_(Oxford Studies in Western Esotericism) Ruben van Luijk - Children of Lucifer_ The Origins of Modern Religious Satanism-Oxford University Press (2016).pdf.json  summary_(The Luciferian Doctrine #2) Andrzej J_ziorski - I survived through The Apocalypse.pdf.json  summary_(The Luciferian Doctrine 3) J_ziorski, A. - My female Slave-Andrzej J_ziorski (2018).pdf.json  summary_(The Luciferian Doctrine) Andrzej J_ziorski - The Luciferian Doctrine - My Female Slave-NT (2020).pdf.json  summary_(The Luciferian Doctrine) J_ziorski, A. - The Luciferian Doctrine (2018).pdf.json  summary_(eBook) Freud, Sigmund - The Interpretation of Dreams.pdf.json  summary_(ebook - occult) The Book of Lucifer.pdf.json  summary_(german) F. H. Masuch - Das sechste und siebente Buch Moses (1950).pdf.json  summary_(german) F. H. Masuch - Das zehnte, elfte und zwölfte Buch Moses (1953).pdf.json  summary_+Essential Skills of Magick.pdf.json  summary_---michael-tsarion-taroscopes-and-astrotheology-intro-89-pages.pdf.json  summary_-Michael-Tsarion-The-Inner-Zodiac.pdf.json  (+4574 more)
(+25 files in other folders)
