[project]
name = "grimoire-cli"
version = "0.1.0"
description = "CLI tool for book summarization and vector search using Gemini and ChromaDB"
authors = [
    {name = "Ayrton Douglas"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)",
    "google-genai (>=0.2.0,<0.3.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "pypdf (>=6.4.0,<7.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "grimoire"}]

[project.scripts]
grimoire = "grimoire.cli:app"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
