[tool.poetry]
name = "grimoire-cli"
version = "0.1.0"
description = "CLI tool for book summarization and vector search using Gemini and ChromaDB"
authors = ["Ayrton Douglas Freitas Guimarães <ayrtondfg@gmail.com>"]
readme = "README.md"
packages = [{include = "grimoire"}]

[tool.poetry.dependencies]
python = ">=3.12"
typer = ">=0.20.0,<0.21.0"
rich = ">=14.2.0,<15.0.0"
google-genai = ">=0.2.0,<0.3.0"
chromadb = ">=1.3.5,<2.0.0"
pypdf = ">=6.4.0,<7.0.0"
toml = ">=0.10.2,<0.11.0"

[tool.poetry.scripts]
grimoire = "grimoire.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
